# webrtx

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  tsconfig.json  webpack.config.js
.github/workflows/: publish.yml
bvh/: Cargo.toml
bvh/src/: lib.rs
glsl/: Cargo.toml
glsl/src/: lib.rs
naga/: .gitignore  Cargo.toml  LICENSE_MIT
naga/src/: lib.rs
src/: accel_container.ts  blocklayout.ts  compile.ts  constants.ts  index.ts  pass_encoder.ts  patch.ts  pipeline.ts  types.ts  util.ts  wasm_bvh_builder.ts  wasm_modules.ts
src/glsl/: common.glsl  dummy.app.prelude.glsl  geom.glsl  intersect.glsl  layout.glsl  main.comp  prelude.glsl  sbt.glsl  sbt_buffer.glsl  trace.glsl
