[package]
name = "glsl"
version = "0.1.0"
authors = ["Jun <codedhead@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.63"
# TODO: "lexer-v2-min"/"lexer-v2-full"
glsl-lang = { git = "https://github.com/codedhead/glsl-lang.git", features = [
  "lexer-v1",
] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }
strum = "0.21"
strum_macros = "0.21"

[dependencies.web-sys]
version = "0.3"
features = ["console"]

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[patch.crates-io]
glsl-lang-pp = { git = "https://github.com/codedhead/glsl-lang.git" }
glsl-lang-lexer = { git = "https://github.com/codedhead/glsl-lang.git" }
glsl-lang-types = { git = "https://github.com/codedhead/glsl-lang.git" }
glsl-lang-quote = { git = "https://github.com/codedhead/glsl-lang.git" }
